--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "nodemon app.js",
     "set-production": "NODE_ENV='production'",
     "production": "node app.js",
-    "deploy": "rsync -av * deploy@68.183.66.92:/home/deploy/git/trading-api --exclude=node_modules/"
+    "deploy": "rsync -av * deploy@68.183.66.92:/home/deploy/git/trading-api --exclude={node_modules/,db/texts.sqlite}"
   },
   "author": "Matilda Olsson",
   "license": "ISC",
@@ -21,6 +21,7 @@
     "cors": "2.8.5",
     "dotenv": "8.1.0",
     "express": "^4.17.1",
+    "gravatar": "^1.8.0",
     "jsonwebtoken": "8.5.1",
     "mocha": "6.2.0",
     "mongodb": "^3.3.2",
@@ -28,7 +29,6 @@
     "nodemon": "1.19.2",
     "nyc": "^14.1.1",
     "serve-favicon": "^2.5.0",
-    "socket.io": "^2.3.0",
     "sqlite3": "4.1.0"
   },
   "devDependencies": {
